# configurationspp

./: CMakeLists.txt  PKGBUILD  configuration.cc  configuration.hh
cmake/: ConfigurationsPPConfig.cmake
